# SecryPto

./: .gitignore  CLAUDE.md  build_check.bat  package-lock.json  package.json  start_dev.bat  start_dev.ps1  start_dev_msvc.bat
devlog/: CHANGELOG.md
docs/: ARCHITECTURE.md  DESIGN_STANDARDS.md  REQUIREMENTS.md  TECHNICAL_SPEC.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  types.rs
src-tauri/src/common/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/storage/: clipboard_store.rs  mod.rs  vault_store.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/vault/: crypto.rs  manager.rs
src/lib/components/: SearchBar.svelte  TabNav.svelte
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/routes/vault/: +page.svelte
